# arcade_xml_generator

./: LICENSE  pyproject.toml  setup.py  simpleTest.xml
.github/workflows/: python-publish.yml
docs/: README.md  component_specification  functional_specification
docs/example_output/: dummy_core_setup_xml.xml  dummy_patch_setup_xml.xml  setup_hex.xml
src/: __init__.py  compile_xml.py  read_input_xml.py  scratch.txt
tests/unit/: action_param.xml  children_test.xml  test_compile.py
xml_files/: command.potts.xml  command.xml  parameter.patch.xml  parameter.potts.xml  parameter.xml
