[tool.poetry]
name = "sandbox"
version = "0.0.0"
description = ""
authors = ["Olaf B. W. H. Corning <olafc@uw.edu>"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.12.2"
tox = "^3.24.5"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
Sphinx = "^4.1.1"
mypy = "^0.941"
sphinx-rtd-theme = "^1.0.0"
sphinx_mdinclude = "^0.5.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "arcade-xml-generator"